// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default HeroBanner 1`] = `
<div
  className="css-s65f2z-StyledBanner e38sxrk4"
  style={
    {
      "backgroundImage": "url(test-image-stub)",
      "backgroundPosition": "center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
    }
  }
>
  <div
    className="css-l0a4nd-BannerContentWrap e38sxrk3"
  >
    <div
      className="css-1ubtxoh-StyledTopic e38sxrk2"
    >
      Build with Dwolla
    </div>
    <div
      className="css-1oef8wh-StyledDescription e38sxrk1"
    >
      Documentation, tools and resources for developers to integrate Dwolla's account-to-account payments Platform.
    </div>
  </div>
</div>
`;

exports[`HeroBanner - with SearchBar 1`] = `
<div
  className="css-s65f2z-StyledBanner e38sxrk4"
  style={
    {
      "backgroundImage": "url(test-image-stub)",
      "backgroundPosition": "center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
    }
  }
>
  <div
    className="css-l0a4nd-BannerContentWrap e38sxrk3"
  >
    <div
      className="css-1ubtxoh-StyledTopic e38sxrk2"
    >
      Build with Dwolla
    </div>
    <div
      className="css-1oef8wh-StyledDescription e38sxrk1"
    >
      Documentation, tools and resources for developers to integrate Dwolla's account-to-account payments Platform.
    </div>
    <div
      className="search-ai-button css-1piufyn-SearchWrapper e38sxrk0"
    >
      <div
        aria-label="search or ask ai with cmd + k"
        className="css-1j6700x-SearchWrapper e1stdte24"
        id="search-ai-button"
        role="button"
        tabIndex={0}
      >
        <div
          className="css-fwa6yu-SearchIconWrapper e1stdte23"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-d09jsa-MuiSvgIcon-root"
            data-testid="SearchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <div
          className="css-1vkr7di-StyledSearchText e1stdte21"
        >
          Search or ask AI...
        </div>
        <div
          aria-label="Ask AI"
          aria-labelledby={null}
          className=" css-1mvdm01-AskAiIconWrapper e1stdte22"
          data-mui-internal-clone-element={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <svg
            width={33}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
